--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,6 @@ ul {
   margin-bottom: 0;
 }
 
-
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -41,7 +40,6 @@ ul {
 
 .header {
   border-bottom: 1px solid #ececec;
-
 }
 
 .header-container-nav {
@@ -91,20 +89,16 @@ ul {
 
 .section {
   padding-top: 94px;
-  
-  
 }
 
 /*контакты хедер*/
-.contacts-link{
-   margin-right: 50px;
-   
+.contacts-link {
+  margin-right: 50px;
 }
 
 .contacts-link:last-child {
- margin-right: 0;
+  margin-right: 0;
 }
-
 
 .contacts-phone:hover,
 .contacts-phone:focus,
@@ -130,6 +124,14 @@ ul {
   max-width: 1600px;
   padding-top: 200px;
   padding-bottom: 200px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4)),
+    url("../image/home/team.jpg");
 }
 
 /*заголовок*/
@@ -181,21 +183,45 @@ ul {
 .plan-item {
   width: 270px;
   margin-right: 30px;
-font-size: 14px;
-line-height: 1.7;
+  font-size: 14px;
+  line-height: 1.7;
 }
 
-.plan-item:last-child{
+.plan-item::before {
+  display: block;
+  content: "";
+  height: 120px;
+  background-color: #f5f4fa;
+  background-size: 70px 70px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 30px;
+}
+
+.plan-icon::before {
+  background-image: url("../image/icon/antenna.png");
+}
+
+.plan-vector::before {
+  background-image: url("../image/icon/vector.png");
+}
+
+.plan-diagram::before {
+  background-image: url("../image/icon/diagram.png");
+}
+
+.plan-astronaut::before {
+  background-image: url("../image/icon/astronaut.png");
+}
+
+.plan-item:last-child {
   margin-right: 0;
 }
 
-  
-}
 /*секция план*/
 .upper-title {
   font-size: 14px;
   line-height: 1.71;
-
 }
 
 /*Чем мы занимаемся*/
@@ -206,7 +232,6 @@ line-height: 1.7;
 .about-list {
   display: flex;
   margin-right: -30px;
-  
 }
 
 .about-item {
@@ -235,7 +260,6 @@ line-height: 1.7;
 
 .team-list {
   display: flex;
- 
 }
 
 .team-caption-list {
@@ -273,7 +297,7 @@ line-height: 1.7;
   margin-bottom: 10px;
 }
 
-.team-captiom-title{
+.team-captiom-title {
   padding-top: 30px;
   padding-bottom: 30px;
 }
@@ -283,7 +307,7 @@ line-height: 1.7;
   font-size: 16px;
   line-height: 1.18;
   color: var(--title-text-color);
- margin-bottom: 0;
+  margin-bottom: 0;
   text-align: center;
 }
 
@@ -308,8 +332,8 @@ line-height: 1.7;
   font-size: 14px;
   line-height: 1.71;
   color: var(--main-tetle-text);
- 
- margin-bottom: 9px;
+
+  margin-bottom: 9px;
 }
 
 .footer-phone,
@@ -320,14 +344,8 @@ line-height: 1.7;
 }
 
 .footer-contacts-mail:not(:last-child) {
-margin-bottom: 9px;
-
+  margin-bottom: 9px;
 }
-
-
-
-
-
 
 /*страница портфолио*/
 :root {
@@ -393,21 +411,16 @@ a {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
- 
 }
 
-.features{
+.features {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-
-
-
-.features-benesits:not(:last-child){
-margin-right: 8px;
+.features-benesits:not(:last-child) {
+  margin-right: 8px;
 }
-
 
 .button-benefits {
   cursor: pointer;
@@ -423,7 +436,6 @@ margin-right: 8px;
   padding-right: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
-
 }
 
 .button-benefits:hover,
@@ -452,22 +464,18 @@ margin-right: 8px;
 /* заголовок */
 
 .list {
- display: flex;
- flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
   margin-top: -30px;
   margin-left: -30px;
-
- 
 }
 
 .list-title {
-  
   flex-basis: calc(100% / 3 - 30px);
   margin-top: 30px;
   margin-left: 30px;
   background: #ffffff;
   box-sizing: border-box;
- 
 }
 
 .subject {
@@ -475,8 +483,6 @@ margin-right: 8px;
   font-size: 18px;
   line-height: 2;
   margin-bottom: 4px;
-  
- 
 }
 
 /* текст */
@@ -485,17 +491,14 @@ margin-right: 8px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.8;
-  
 }
 
-
-
-.list-title-subject{
- padding: 20px 24px;
- margin: 0;
- border-left: 1px solid #EEEEEE;
- border-right: 1px solid #EEEEEE;
- border-bottom: 1px solid #EEEEEE;
+.list-title-subject {
+  padding: 20px 24px;
+  margin: 0;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
 }
 
 .footer-address {
@@ -504,13 +507,12 @@ margin-right: 8px;
   line-height: 1.7;
 }
 
-
 img {
   display: block;
   height: auto;
 }
 
-a{
-  color: var(--accent-color) ;
+a {
+  color: var(--accent-color);
   text-decoration: none;
 }
