--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@ ul {
 
 .section {
   padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .nav-contacts-icon {
@@ -101,12 +102,14 @@ ul {
   width: 10px;
   height: 16px;
   margin-right: 10px;
+  fill: currentColor;
 }
 
 .nav-contacts-icon-mail {
   width: 16px;
   height: 12px;
   margin-right: 10px;
+  fill: currentColor;
 }
 
 /*контакты хедер*/
@@ -151,6 +154,7 @@ a:focus .nav-contacts-icon-phone {
   padding-top: 32px;
   padding-bottom: 32px;
   align-items: center;
+  display: flex;
 }
 
 .hero {
@@ -392,17 +396,20 @@ a:focus .nav-contacts-icon-phone {
 
 /*Наши клиенты*/
 
+.regular-clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .clients-list {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 94px;
 }
 
 .logo-clients-link {
   display: flex;
   width: 100%;
-  height: 100%px;
+  height: 100%;
   justify-content: center;
   align-items: center;
   border: 1px solid #afb1b8;
@@ -413,6 +420,10 @@ a:focus .nav-contacts-icon-phone {
   margin-right: 30px;
   width: 170px;
   height: 92px;
+}
+
+.logo-clients:not(:last-child) {
+  margin-right: 30px;
 }
 
 .logo-clients-link:hover,
@@ -439,7 +450,7 @@ a:focus .nav-contacts-icon-phone {
   font-size: 36px;
   line-height: 42px;
   color: var(--accent-color);
-  margin-top: 94px;
+  margin-bottom: 50px;
 }
 
 .logo-clients-icon:hover .logo-clients-link,
@@ -536,6 +547,10 @@ a:focus .nav-contacts-icon-phone {
   justify-content: center;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.team-footer:not(:last-child) {
+  margin-right: 10px;
 }
 
 .footer-icon:hover,
