--- a/css/styles.css
+++ b/css/styles.css
@@ -743,19 +743,33 @@ a {
   width: 370px;
   height: 294px;
   background-color: rgba(33, 150, 243, 0.9);
-  opacity: 0;
+  /*opacity: 0;*/
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-title:hover .list-title-wrapper::before {
+  transform: translate(0);
+}
+
+.list-title {
+  overflow: hidden;
 }
 
 .lopa {
   display: inline-block;
   position: absolute;
-  opacity: 0;
+  opacity: 1;
   font-weight: 400;
   font-size: 18px;
   line-height: 28px;
   color: var(--main-tetle-text);
   justify-content: center;
 }
+
+/*.lopa:hover {
+  opacity: 1;
+} */
 
 /* заголовок */
 
